[package]
name = "hyper-reverse-proxy"
version = "0.5.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>", "Felipe Noronha <felipenoris@gmail.com>", "Jan Kantert <jan-hyper-reverse-proxy@kantert.net>"]
license = "Apache-2.0"
description = "A simple reverse proxy, to be used with Hyper and Tokio."
homepage = "https://github.com/felipenoris/hyper-reverse-proxy"
documentation = "https://docs.rs/hyper-reverse-proxy"
repository = "https://github.com/felipenoris/hyper-reverse-proxy"
keywords = ["http", "hyper"]
categories = ["network-programming", "web-programming"]
readme = "README.md"
edition = "2018"

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*"
]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4"
unicase = "2.6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }