[package]
name = "hyper-reverse-proxy"
version = "0.5.2-dev"
authors = [
  "Brendan Zabarauskas <bjzaba@yahoo.com.au>",
  "Felipe Noronha <felipenoris@gmail.com>",
  "Jan Kantert <jan-hyper-reverse-proxy@kantert.net>",
]
license = "Apache-2.0"
description = "A simple reverse proxy, to be used with Hyper and Tokio."
homepage = "https://github.com/felipenoris/hyper-reverse-proxy"
documentation = "https://docs.rs/hyper-reverse-proxy"
repository = "https://github.com/felipenoris/hyper-reverse-proxy"
keywords = ["http", "hyper"]
categories = ["network-programming", "web-programming"]
readme = "README.md"
edition = "2018"

include = ["Cargo.toml", "LICENSE", "src/**/*"]

[[bench]]
name="internal"
harness = false

[dependencies]
hyper = { version = "0.14.18", features = ["client"] }
tokio = { version = "1.17.0", features = ["io-util", "rt"] }
tracing = "0.1.34"

[dev-dependencies]
hyper = { version = "0.14.18", features = ["server"] }
futures = "0.3.21"
async-trait = "0.1.53"
async-tungstenite = { version = "0.17", features = ["tokio-runtime"] }
tokio-test = "0.4.2"
test-context = "0.1.3"
tokiotest-httpserver = "0.2.1"
hyper-trust-dns = { version = "0.4.2", features = [
  "rustls-http2",
  "dnssec-ring",
  "dns-over-https-rustls",
  "rustls-webpki"
] }
rand = "0.8.5"
tungstenite = "0.17"
url = "2.2"
criterion = "0.3.5"
lazy_static = "1.4.0"

[features]

__bench=[]